--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,15 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_28E9j9527  (22-November-2017) ARM SDK
+* CHANGED: wget: (backport) update to 1.19.2
+* CHANGED: samba: specify getwd cache since wide links is disabled
+* CHANGED: samba36: update socket options
+* CHANGED: samba36: increase buffer size for ARM when using new samba
+- FIXED: sysinfo: fix clock freq tools display for ARM routers
+* FIXED: httpd: (backport) fix crash if /proc/cpuinfo is missing the Processor line
+
+
 374.43_28E8j9527  (19-November-2017) ARM SDK
 * CHANGED: openssl: update to 1.0.2m
 * CHANGED: modprobe: (backport) add aliases so xt_set and ipt_set are automatically modprobed
