--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,10 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_29E1j9527  (9-December-2017) ARM SDK, MIPS,ARM KRACK
+* CHANGED: openssl: update to 1.0.2n
+
+
 374.43_29A9j9527  (3-December-2017) ARM SDK, MIPS,ARM KRACK
 - CHANGED: ARM: update ctf header file for AC56, AC68
 * CHANGED: Revert "MIPS: update netfilter conntrack"
