--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,11 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_32E3j9527  (1-April-2018) ARM SDK, MIPS,ARM KRACK
+* CHANGED: ARM: update asuswebstorage to 384.20624
+* FIXED: firewall: allow special use ipv6 addresses as destination address
+
+
 374.43_32E2j9527  (30-March-2018) ARM SDK, MIPS,ARM KRACK
 * CHANGED: MIPS: update asuswebstorage to 380.8228
 * CHANGED: MIPS: update acsd to 380.8228
