--- a/release/src/router/dnsmasq/CHANGELOG
+++ b/release/src/router/dnsmasq/CHANGELOG
@@ -36,7 +36,11 @@ version 2.80
 	Fix bug which sometimes caused dnsmasq to wrongly return answers
 	without DNSSEC RRs to queries with the do-bit set, but only when
 	DNSSEC validation was not enabled.
-	Thanks to Petr MenÅ¡Ã­k for spotting this.
+	Thanks to Petr Menšík for spotting this.
+
+	Fix missing fatal errors with some malformed options
+	(server, local, address, rebind-domain-ok, ipset, alias).
+	Thanks to Eugene Lozovoy for spotting the problem.
 	
 	
 version 2.79
