--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,11 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_34B5j9527  (6-August-2018) ARM SDK, MIPS,ARM KRACK
+- FIXED: dnsmasq: (upstream) fix crash parsing a --synth-domain with no prefix
+* FIXED: stubby: services - set correct permissions on stubby.yml
+* FIXED: stubby: services - clean up yml file formatting
+
 374.43_34B4j9527  (4-August-2018) ARM SDK, MIPS,ARM KRACK
 * NEW stubby: add support for orderd vs roundrobbin server access
 * CHANGED: webui: add gui support for stubby_noipv6
